
[tool.poetry]
name = "domdiv"
version = "3.14.0"
description = "Divider Generation for the Dominion Card Game"
authors = ["Peter Gorniak <sumpfork@mailmight.com>"]
license = "MIT"
homepage = "http://domdiv.bgtools.net"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.2.0"
reportlab = "^3.5.67"
ConfigArgParse = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.12.1"
doit = "^0.33.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
