
[tool.poetry]
name = "domdiv"
version = "0.0.0"
description = "Divider Generation for the Dominion Card Game"
authors = ["Peter Gorniak <sumpfork@mailmight.com>"]
license = "MIT"
homepage = "http://domdiv.bgtools.net"
readme = "README.md"
repository = "https://github.com/sumpfork/dominiontabs"
keywords = ["boardgame", "cardgame", "dividers"]

[tool.poetry.scripts]
dominion_dividers = 'domdiv.main:main'
domdiv_update_language = 'domdiv.tools.update_language:run'
domdiv_bgg_release = 'domdiv.tools.bgg_release:make_bgg_release'
domdiv_dedupe_cards = 'domdiv.tools.cleanup_language_dupes:main'

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.2.0"
reportlab = "^3.5.67"
ConfigArgParse = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.12.1"
doit = "^0.33.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
tox-poetry = "^0.4.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
